# cpaior2018-parallel-mcs-paper

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cilk-clique-code/: .gitignore  CMakeLists.txt  clique.cc  file.mk  heatmapify.rb  main.mk  params.hh  solve_max_common_subgraph.cc
cilk-clique-code/include/: clique.hh  params.hh
cilk-clique-code/src/: clique.cc
cilk-kdown-code/: parallel.cc  parallel.hh  solve_subgraph_isomorphism.cc
clique-code/: solve_max_common_subgraph.cc
experiments/: Makefile.mcs33v  Makefile.mcs33v-parallel  Makefile.mcs33v-stats  Makefile.mcs33ve  Makefile.mcs33ve-connected  Makefile.mcs33ve-connected-parallel  Makefile.mcs33ve-connected-stats  Makefile.mcs33ved  Makefile.mcs33ved-parallel  Makefile.mcs33ved-stats  Makefile.mcsplain  Makefile.mcsplain-connected  Makefile.mcsplain-connected-parallel  Makefile.mcsplain-connected-stats  Makefile.mcsplain-parallel  Makefile.mcsplain-stats  Makefile.sip  Makefile.sip-parallel  Makefile.sip-stats  mcs33vedinstances.txt
james-cpp/: mcsp.c
james-cpp-parallel/: mcsp.cc
paper/: .gitignore  Makefile  asify.sh  dblp.bib  graph-as-33v.gnuplot  graph-as-33ve-connected.gnuplot  graph-as-33ved.gnuplot  graph-as-clique.gnuplot  graph-as-kdown.gnuplot  graph-as-mcsplit.gnuplot  graph-as-plain-connected.gnuplot  graph-as-plain.gnuplot  graph-as-sip.gnuplot  graph-cumulative-33v.gnuplot  graph-cumulative-33ve-connected.gnuplot  graph-cumulative-33ved.gnuplot  graph-cumulative-plain-connected.gnuplot  graph-cumulative-plain.gnuplot  graph-cumulative-sip.gnuplot  (+71 more)
parallel-clique-code/: clique.cc  (+3 more)
(+626528 files in other folders)
